[package]
name = "rustdate"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustdate"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde_json = "1.0.91"
tokio = {version="1.24.2", features=["full"]}
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
zip = "0.6.3"
online = { version = "4.0.0", features = ["tokio"] }
anyhow = "1.0.68"
